test/errors/types/type_check_null_binding_fail.hy
// EXPECT_OUTPUT: Pattern binding is not supported for 'null' checks
int value = 0
if value is null temp
{
}
